--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -8,12 +8,12 @@
 </Auk::Tabs> --}}
 <ul class="au-c-anchor-nav">
   <li>
-    <a href="#case">Dossier</a>
+    <a href="#case" class="js-anchor">Dossier</a>
   </li>
   <li>
-    <a href="#documents">Documenten</a>
+    <a href="#documents" class="js-anchor">Documenten</a>
   </li>
   <li>
-    <a href="#agenda">Agendering</a>
+    <a href="#agenda" class="js-anchor">Agendering</a>
   </li>
 </ul>
