--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -67,17 +67,17 @@
           <div class="auk-u-mb-2">
             <p
               data-test-agendaitem-titles-title
-              class="auk-o-flex--inline"
+              class="auk-o-flex--inline au-u-margin-bottom-none"
             >
               {{@agendaitem.title}}
             </p>
           </div>
         {{/if}}
-        <div>
+        <div class="auk-u-my-4">
           {{yield}}
         </div>
         {{#if (is-announcement @agendaitem.type)}}
-          <div class="auk-u-my-2" data-test-agendaitem-titles-news-item>
+          <div class="auk-u-mt-2" data-test-agendaitem-titles-news-item>
             {{#if @newsItem}}
               {{#if @newsItem.inNewsletter}}
                 <AuPill @size="small" @skin="border" @icon="website">
@@ -96,21 +96,21 @@
           </div>
         {{else}}
           {{#if @subcase.subcaseName}}
-            <div class="auk-u-my-2">
+            <div class="auk-u-mt-2">
               <AuPill @size="small" data-test-agendaitem-subcase-name>
                 {{capitalize @subcase.subcaseName}}
               </AuPill>
             </div>
           {{/if}}
           {{#if this.decisionActivity.isPostponed}}
-            <div class="auk-u-my-2">
+            <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "postponed-item"}}
               </AuPill>
             </div>
           {{/if}}
           {{#if this.decisionActivity.isRetracted}}
-            <div class="auk-u-my-2">
+            <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "retracted-item"}}
               </AuPill>
