--- a/app/components/subcase/subcase-agenda-panel/subcase-agenda-view.hbs
+++ b/app/components/subcase/subcase-agenda-panel/subcase-agenda-view.hbs
@@ -16,9 +16,11 @@
         <div class="auk-loader" role="alert" aria-busy="true"></div>
       {{else if this.modelsOfMeetings}}
         <div class="au-u-flex au-u-flex--spaced-tiny">
-          <p class="au-u-medium">{{t "is-on-agenda"}}</p>
-          <p>
-            {{#each this.modelsOfMeetings as |models| }}
+          <p class="au-u-medium">
+            {{t "is-on-agenda"}}
+
+            {{#each this.modelsOfMeetings as |models index| }}
+              {{#if (eq index 0)}}
               {{#let models.[0] models.[1] models.[2] as |meeting agenda agendaitem|}}
                 <AuLink
                   data-test-subcase-description-agenda-link
@@ -30,9 +32,11 @@
                   }}
                 >
                   {{! prettier-ignore}}
-                  {{date-phrase meeting.plannedStart}}{{if (has-next models this.modelsOfMeetings) ", "}}
+                  {{date-phrase meeting.plannedStart}}
+                  {{!-- {{if (has-next models this.modelsOfMeetings) ", "}} --}}
                 </AuLink>
               {{/let}}
+              {{/if}}
             {{/each}}
           </p>
         </div>
