KAS-4423 fix confidentiality for flattened piece and fix translations

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -86,20 +86,20 @@
                 </p>
               {{/if}}
               {{#if
-                (and this.signaturesEnabled (await (this.canViewSignedPiece)))
+                (and this.signaturesEnabled (await (this.canViewConfidentialPiece)))
               }}
-                {{#if this.piece.signedPiece.file}}
+                {{#if this.piece.signedPieceCopy.file}}
                   <p>
                     <AuLinkExternal
                       href={{await
-                        this.piece.signedPiece.namedDownloadLinkPromise
+                        this.piece.signedPieceCopy.namedDownloadLinkPromise
                       }}
                       download
                     >
                       {{t "signed-document"}}
                     </AuLinkExternal>
                     {{t "on"}}
-                    {{datetime-at this.piece.signedPiece.created}}
+                    {{datetime-at this.piece.signedPieceCopy.created}}
                   </p>
                 {{/if}}
               {{/if}}
