KAS-4420 Small fix to improve conditional display of this.proposalText

--- a/app/components/news-item/view-panel.hbs
+++ b/app/components/news-item/view-panel.hbs
@@ -39,10 +39,12 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body>
-    <AuContent data-test-agendaitem-news-item-content>
+    {{#if this.proposalText}}
       <p class="au-u-italic">
         {{this.proposalText}}
       </p>
+    {{/if}}
+    <AuContent class="{{if this.proposalText 'au-u-margin-top-small'}}" data-test-agendaitem-news-item-content>
       <SanitizeHtml
         class="auk-u-overflow-wrap-anywhere"
         @raw={{true}}
