KAS-4420 Adjust rdfa-holder to take up max width (when not full screen)

--- a/app/styles/addon-overrides/_ember-rdfa-editor.scss
+++ b/app/styles/addon-overrides/_ember-rdfa-editor.scss
@@ -168,7 +168,7 @@ $say-editor-border-radius: $au-input-border-radius;
 // Full screen
 
 .auk-rdfa-holder {
-  //
+  width: 100%;
 }
 
 .auk-rdfa-holder__header {
