--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -30,6 +30,7 @@
           @agendaitem={{this.model}}
           @agendaActivity={{this.agendaActivity}}
           @currentAgenda={{this.agenda}}
+          @subcase={{this.subcase}}
           @reverseSortedAgendas={{this.reverseSortedAgendas}}
           @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
         />
