KAS-4412 Add loader around decision edit button

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -362,6 +362,8 @@
                           {{t "edit"}}
                         </AuButton>
                       </Group.Item>
+                    {{else}}
+                        <Auk::Loader />
                     {{/if}}
                 </Toolbar.Group>
               </Auk::Toolbar>
