fix: change title of status filter to Alle statussen

--- a/app/components/search/publication-statuses-filter.hbs
+++ b/app/components/search/publication-statuses-filter.hbs
@@ -3,7 +3,7 @@
   <Auk::Loader />
 {{else}}
   <Auk::CheckboxTree
-    @label={{capitalize (t "all-results")}}
+    @label={{t "all-statuses"}}
     @items={{this.statuses}}
     @selectedItems={{this.selectedStatuses}}
     @didUpdate={{this.onChangeStatuses}}
