chore: use shorthand or to pick between shortTitle and title

--- a/app/components/search/result-cards/publication-flow.hbs
+++ b/app/components/search/result-cards/publication-flow.hbs
@@ -20,14 +20,14 @@
           <span class="card-link">
             <SanitizeHtml
               @raw={{true}}
-              @value={{if @shortTitle @shortTitle @title}}
+              @value={{or @shortTitle @title}}
             />
           </span>
         </AuLink>
       {{else}}
         <SanitizeHtml
           @raw={{true}}
-          @value={{if @shortTitle @shortTitle @title}}
+          @value={{or @shortTitle @title}}
         />
       {{/if}}
     </AuHeading>
