KAS-4435 fix retracted documents of agendaitem can be marked

--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -4,6 +4,7 @@
       <Documents::DocumentCard
         @piece={{doc}}
         @agendaContext={{@agendaContext}}
+        @agendaitem={{@agendaitem}}
         @isHighlighted={{includes doc @highlightedPieces}}
         @isEditable={{@isEditable}}
         @hideNewerVersions={{false}}
