--- a/app/components/publications/publication/case/remark/remark-panel.hbs
+++ b/app/components/publications/publication/case/remark/remark-panel.hbs
@@ -5,7 +5,7 @@
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              {{t "publication-remark"}}
+              {{t "remarks"}}
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
@@ -34,7 +34,7 @@
           <div class="au-c-form">
             <AuFormRow>
               <Auk::Label>
-                <span>{{t "publication-remark"}}</span>
+                <span>{{t "remarks"}}</span>
                 {{!(i) inside label to maintain Auk:Label's layout}}
                 <Utils::Generic::TooltipHelp>
                   {{t "publication-remark-help"}}
