--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -257,7 +257,13 @@
                </h4>
              </Toolbar.Group>
              <Toolbar.Group @position="right" as |Group|>
-               {{#if this.mayBeEdited}}
+               {{#unless 
+                    (and
+                      (not this.isEditingAnnotation)
+                      this.mayEditDecisionReport
+                    )}}
+                  <Auk::Loader />
+                {{else}}
                    <Group.Item>
                      <AuButton
                        @skin="naked"
@@ -269,9 +275,7 @@
                        {{t "edit"}}
                      </AuButton>
                    </Group.Item>
-                  {{else}}
-                    <Auk::Loader />
-                 {{/if}}
+                 {{/unless}}
              </Toolbar.Group>
            </Auk::Toolbar>
          <SanitizeHtml
@@ -335,7 +339,13 @@
                   </h4>
                 </Toolbar.Group>
                 <Toolbar.Group @position="right" as |Group|>
-                  {{#if this.mayBeEdited}}
+                  {{#unless 
+                      (and 
+                      (not this.isEditingConcern)
+                      this.mayEditDecisionReport
+                      )}}
+                      <Auk::Loader />
+                  {{else}}
                       <Group.Item>
                         <AuButton
                           data-test-agendaitem-decision-create
@@ -348,9 +358,7 @@
                           {{t "edit"}}
                         </AuButton>
                       </Group.Item>
-                    {{else}}
-                        <Auk::Loader />
-                    {{/if}}
+                    {{/unless}}
                 </Toolbar.Group>
               </Auk::Toolbar>
             <SanitizeHtml
@@ -414,22 +422,26 @@
                     </h4>
                   </Toolbar.Group>
                   <Toolbar.Group @position="right" as |Group|>
-                     {{#if this.mayBeEdited}}
-                      <Group.Item>
-                        <AuButton
-                          data-test-agendaitem-decision-create
-                          @skin="naked"
-                          @icon="pencil"
-                          @iconAlignment="left"
-                          @disabled={{this.saveReport.isRunning}}
-                          {{on "click" this.startEditingTreatment}}
-                        >
-                          {{t "edit"}}
-                        </AuButton>
-                      </Group.Item>
-                    {{else}}
-                      <Auk::Loader />
-                    {{/if}}
+                     {{#unless 
+                          (and
+                            (not this.isEditingTreatment)
+                            this.mayEditDecisionReport
+                            )}}
+                        <Auk::Loader />
+                      {{else}}
+                        <Group.Item>
+                          <AuButton
+                            data-test-agendaitem-decision-create
+                            @skin="naked"
+                            @icon="pencil"
+                            @iconAlignment="left"
+                            @disabled={{this.saveReport.isRunning}}
+                            {{on "click" this.startEditingTreatment}}
+                          >
+                            {{t "edit"}}
+                          </AuButton>
+                        </Group.Item>
+                    {{/unless}}
                   </Toolbar.Group>
               </Auk::Toolbar>
             <SanitizeHtml
