chore: disable send to vp modal if there's nothing to send

--- a/app/components/agenda/agendaitem/send-to-vp-modal.hbs
+++ b/app/components/agenda/agendaitem/send-to-vp-modal.hbs
@@ -5,7 +5,7 @@
   @onConfirm={{perform this.sendToVP}}
   @onCancel={{@onCancel}}
   @loading={{this.sendToVP.isRunning}}
-  @disabled={{this.loadData.isRunning}}
+  @disabled={{this.isModalDisabled}}
 >
   <:title>{{t "check-case"}}</:title>
   <:body>
