KAS-4428 Add upper-alpha type styling to au-content wrapper

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -534,6 +534,10 @@ $au-label-color: var(--au-gray-700);
     &[data-list-style='lower-alpha'] {
       list-style-type: lower-alpha;
     }
+
+    &[data-list-style='upper-alpha'] {
+      list-style-type: upper-alpha;
+    }
   }
 
   ol.au-c-list {
