KAS-4372: replaced piece.created with piece.file.created but kept piece.created as fallback

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -99,7 +99,7 @@
                       {{t "signed-document"}}
                     </AuLinkExternal>
                     {{t "on"}}
-                    {{datetime-at this.piece.signedPieceCopy.created}}
+                    {{or (datetime-at this.piece.signedPieceCopy.file.created) (datetime-at this.piece.signedPieceCopy.created)}}
                   </p>
                 {{/if}}
               {{/if}}
