--- a/app/components/agenda/agenda-header/agenda-version-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-version-actions.hbs
@@ -242,7 +242,7 @@
                   </div>
                   <div class="vlc-document-card-item__meta au-u-muted">
                     {{t "uploaded-at"}}
-                    {{datetime-at piece.created}}
+                    {{or (datetime-at piece.file.created) (datetime-at piece.created)}}
                   </div>
                   <div class="vlc-document-card-item__icon">
                     <Auk::Icon @name="clock-rewind" @size="small" />
