--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -35,10 +35,10 @@
             </AuButton>
           </AuButtonGroup>
         </div>
-        {{#if @piece.created}}
+        {{#if (or @piece.file.created @piece.created)}}
           <AuHelpText @skin="secondary">
             {{t "uploaded-at"}}
-            {{datetime-at @piece.created}}
+            {{or (datetime-at @piece.file.created) (datetime-at @piece.created)}}
           </AuHelpText>
         {{/if}}
       </c.header>
