--- a/app/components/documents/document-preview/version-card.hbs
+++ b/app/components/documents/document-preview/version-card.hbs
@@ -17,7 +17,7 @@
       <p>
         {{#if @piece.created}}
           {{t "uploaded-at"}}
-          {{datetime-at @piece.created "-"}}
+          {{or (datetime-at @piece.file.created) (datetime-at @piece.created) "-"}}
         {{/if}}
       </p>
       {{#if @piece.accessLevelLastModified}}
