--- a/app/templates/publications/publication/case.hbs
+++ b/app/templates/publications/publication/case.hbs
@@ -12,11 +12,10 @@
       class="auk-u-mb-3"
     />
 
-    <div class="auk-u-mb-3">
-      <Publications::Publication::Case::Inscription::InscriptionPanel
-        @publicationFlow={{this.model}}
-      />
-    </div>
+    <Publications::Publication::Case::Inscription::InscriptionPanel
+      @publicationFlow={{this.model}}
+      class="auk-u-mb-3"
+    />
 
     <Publications::Publication::Case::Mandatees::MandateesPanel
       @publicationFlow={{this.model}}
