KAS-4431 Add indentation (menu) plugin to editor toolbar

--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -21,6 +21,9 @@
             <Plugins::TextStyle::Superscript @controller={{this.controller}} />
           </Tb.Group>
           <Tb.Group>
+            <Plugins::Indentation::IndentationMenu @controller={{this.controller}} />
+          </Tb.Group>
+          <Tb.Group>
             <Plugins::List::Unordered @controller={{this.controller}} />
             <Plugins::List::Ordered @controller={{this.controller}} />
             <Plugins::List::IndentationControls
