KAS-4431 Add styling for general indentation for use within au-content wrapper

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -592,6 +592,22 @@ $au-label-color: var(--au-gray-700);
   ol[data-list-style='decimal-extended'] {
     @include decimal-extended-styling(5, 1);
   }
+
+  [data-indentation-level='1'] {
+    margin-left: 2.4rem;
+  }
+
+  [data-indentation-level='2'] {
+    margin-left: 4.8rem;
+  }
+
+  [data-indentation-level='3'] {
+    margin-left: 7.2rem;
+  }
+
+  [data-indentation-level='4'] {
+    margin-left: 9.6rem;
+  }
 }
 
 // TODO: the selector below is not an ideal solution, this needs to replaced by a class selector like `.rdfa-table--fixed` or something similar when the omitted class issue on tabled within ember-rdfa-editor is fixed
