--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -54,13 +54,20 @@
   >
     {{t "download-documents"}}
   </AuButton>
-    <AuButton
+  <AuButton
     data-test-agenda-actions-download-decisions
     @skin="link"
     {{on "click" this.openDownloadDecisions}}
     role="menuitem"
   >
     {{t "download-decisions"}}
+  </AuButton>
+  <AuButton
+    @skin="link"
+    {{on "click" this.generateDecisionsBundle}}
+    role="menuitem"
+  >
+    {{t "generate-decisions-bundle"}}
   </AuButton>
 
   {{#if (user-may "manage-meetings")}}
