chore: only show generate decisions button if we have reports

--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -62,13 +62,15 @@
   >
     {{t "download-decisions"}}
   </AuButton>
-  <AuButton
-    @skin="link"
-    {{on "click" this.generateDecisionsBundle}}
-    role="menuitem"
-  >
-    {{t "generate-decisions-bundle"}}
-  </AuButton>
+  {{#if this.reports.length}}
+    <AuButton
+      @skin="link"
+      {{on "click" this.generateDecisionsBundle}}
+      role="menuitem"
+    >
+      {{t "generate-decisions-bundle"}}
+    </AuButton>
+  {{/if}}
 
   {{#if (user-may "manage-meetings")}}
     <AuHr />
