feat: move manage-agendaitems check inside agendaitem-controls component
This lets us show the component to all profiles, not only those who can
manage the agendaitems (specifically for sending to VP button)

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -7,7 +7,7 @@
       @alignment="right"
       class="auk-u-hidden@print"
     >
-      {{#if (and this.areDecisionActionsEnabled this.isDesignAgenda)}}
+      {{#if (and this.areDecisionActionsEnabled this.isDesignAgenda (user-may "manage-agendaitems"))}}
         {{#if this.decisionActivity.isPostponed}}
           <AuButton
             data-test-agendaitem-controls-action-postpone-revert
@@ -56,6 +56,7 @@
         (and
           (or this.currentSession.isAdmin (await this.isDeletable))
           this.isDesignAgenda
+          (user-may "manage-agendaitems")
         )
       }}
         <AuButton
