chore: cleanup submission alert a little bit

--- a/app/components/vp/sent-to-vp-modal.hbs
+++ b/app/components/vp/sent-to-vp-modal.hbs
@@ -1,4 +1,9 @@
-<AuModal @modalOpen={{true}} @closable={{true}} ...attributes>
+<AuModal
+  @modalOpen={{true}}
+  @closable={{true}}
+  @closeModal={{@closeModal}}
+  ...attributes
+>
   <:title>{{t "documents-sent-on"}}
     {{date @submissionActivity.startDate}}</:title>
   <:body>
