--- a/app/components/vp/sent-to-vp-modal.hbs
+++ b/app/components/vp/sent-to-vp-modal.hbs
@@ -8,14 +8,30 @@
     {{date @submissionActivity.startDate}}</:title>
   <:body>
     <AuContent>
-      <p>{{t "the-following-things-were-sent"}}:</p>
-      <ul class="au-u-margin-top">
-        {{#each @submissionActivity.submittedPieces as |piece|}}
-          <li>
-            {{piece.unsignedFile}}
-          </li>
-        {{/each}}
-      </ul>
+      {{#if this.subcaseWithPieces.isLoading}}
+        <AuLoader />
+      {{else if this.subcaseWithPieces.value}}
+        <p>{{t "the-following-things-were-sent"}}:</p>
+        <ul class="au-u-margin-top">
+          {{#each this.subcaseWithPieces.value as |subcaseWithPieces|}}
+            <li>
+              {{capitalize subcaseWithPieces.subcase.subcaseName}}:
+              <ul>
+                {{#each subcaseWithPieces.pieces as |o|}}
+                  <li>
+                    <LinkTo @route="document" @model={{o.piece.id}}>
+                      {{o.piece.name}}
+                      {{this.submittedPieceList o.submittedPiece}}
+                    </LinkTo>
+                  </li>
+                {{/each}}
+              </ul>
+            </li>
+          {{/each}}
+        </ul>
+      {{else}}
+
+      {{/if}}
     </AuContent>
   </:body>
 </AuModal>
