--- a/app/components/format-list.hbs
+++ b/app/components/format-list.hbs
@@ -1,6 +1,6 @@
 {{#each this.parts as |part|}}
   {{#if (eq part.type "literal")}}
-    {{trim part.value}}
+    {{part.value}}
   {{else if (eq part.type "element")}}
     {{yield part.value}}
   {{/if}}
